# cs2-RKON-Panel

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
.github/workflows/: release.yml
release/: cs2-rcon-panel_setup.msi
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/layout/: sidebar.tsx
src/components/server/: chat.tsx  console.tsx  dashboard.tsx  map-selector.tsx  match-generator.tsx  player-list.tsx  server-modal.tsx  server-settings.tsx
src/components/settings/: general-settings.tsx
src/lib/: a2s.ts  db.ts  rcon.ts
