[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rcon = "0.5.2"
a2s = "0.5.3"
tiny_http = "0.12.0"
tokio = { version = "1", features = ["full"] }
tauri-plugin-sql = "2.2.0"
local-ip-address = "0.6.3"
